--- a/src/Memo.Blog.App/Memo.Blog.App.csproj
+++ b/src/Memo.Blog.App/Memo.Blog.App.csproj
@@ -36,6 +36,8 @@
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">24.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
+
+		<DefineConstants>$(DefineConstants);$(Environment)</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
