--- a/src/Memo.Blog.App/Memo.Blog.App.csproj
+++ b/src/Memo.Blog.App/Memo.Blog.App.csproj
@@ -61,6 +61,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
         <PackageReference Include="Masa.Blazor" Version="1.6.8" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.8" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.82" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.82" />
