--- a/src/Memo.Blog.App/Memo.Blog.App.csproj
+++ b/src/Memo.Blog.App/Memo.Blog.App.csproj
@@ -49,7 +49,6 @@
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*" />
-        <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
         <!-- Custom Fonts -->
         <MauiFont Include="Resources\Fonts\*" />
@@ -67,6 +66,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Resources\Images\logo.png" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
         <PackageReference Include="Masa.Blazor" Version="1.6.8" />
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.8" />
@@ -81,7 +84,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Resources\Images\" />
       <Folder Include="Utils\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <MauiImage Include="wwwroot\images\logo.png" />
     </ItemGroup>
 
 </Project>
