--- a/package.json
+++ b/package.json
@@ -10,23 +10,40 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@iconify-json/carbon": "^1.2.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@types/nprogress": "^0.2.3",
+    "@unhead/vue": "^2.0.12",
+    "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
     "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "vant": "^4.9.21",
+    "vconsole": "^3.15.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^5.0.0",
     "@tauri-apps/cli": "^2",
+    "@types/node": "^24.1.0",
+    "@unocss/eslint-config": "^66.3.3",
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.32.0",
+    "eslint-plugin-format": "^1.0.1",
+    "less": "^4.4.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.2.0",
     "typescript": "~5.6.2",
+    "unocss": "^66.3.3",
+    "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
     "unplugin-vue-router": "^0.14.0",
     "vite": "^6.0.3",
+    "vite-plugin-vconsole": "^2.1.1",
     "vue-tsc": "^2.1.10"
   }
 }
