--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@unhead/vue": "^2.0.12",
     "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
+    "echarts": "^5.6.0",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
+    "resize-detector": "^0.3.0",
     "vant": "^4.9.21",
     "vconsole": "^3.15.1",
     "vue": "^3.5.13",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^5.0.0",
     "@tauri-apps/cli": "^2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.1.0",
     "@unocss/eslint-config": "^66.3.3",
     "@vitejs/plugin-vue": "^5.2.1",
