--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@unhead/vue": "^2.0.12",
     "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
