--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,12 @@
     "useDefineForClassFields": true,
     "baseUrl": ".",
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -16,17 +19,22 @@
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     // "composite": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@/*": ["src/*"],
-      "~root/*": ["./*"]
+      "@/*": [
+        "src/*"
+      ],
+      "~root/*": [
+        "./*"
+      ]
     },
-    "types": ["unplugin-vue-router/client"]
+    "types": [
+      "unplugin-vue-router/client"
+    ]
   },
   "include": [
     "vite.config.ts",
@@ -36,7 +44,7 @@
     "src/**/*.vue",
     "src/types/components.d.ts",
     "src/types/auto-imports.d.ts",
-    "src/types/typed-router.d.ts"
+    "src/types/typed-router.d.ts",
   ]
   // "references": [{ "path": "./tsconfig.node.json" }]
 }
