✨ 调整笔记编辑器

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "unplugin-vue-components": "^28.8.0",
     "unplugin-vue-router": "^0.14.0",
     "vite": "^6.0.3",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vconsole": "^2.1.1",
     "vue-tsc": "^2.1.10"
   }
